syntax = "proto3";

package auth;

option go_package = "auth-service/api;api";

service AuthService {
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
    rpc SignIn (SignInRequest) returns (SignInResponse);
}

message SignUpRequest {
    string username = 1;
    string password = 2;
}

message SignUpResponse {
    string message = 1;
}

message SignInRequest {
    string username = 1;
    string password = 2;
}

message SignInResponse {
    string token = 1;
}
